--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "dist/server.js",
+      "use": "@vercel/node"
+    }
+  ],
   "rewrites": [{ "source": "/(.*)", "destination": "/dist/server.js" }]
 }
